# GOTCHA

./: .gitignore  .travis.yml  CMakeLists.txt  COPYRIGHT  README.md
.github/docker/: fedora.dockerfile
.github/workflows/: build-and-test.yaml
cmake/: config.cmake.in  gotcha.cmake  gotcha_config.h.in  gotcha_testing.cmake
docs/: Makefile  api.rst  build.rst  conf.py  definitions.rst  examples.rst  index.rst  limitations.rst  other_section.rst  overview.rst  requirements.txt  style-guides.rst  testing.rst
docs/_themes/sphinx_rtd_theme/static/css/: badge_only.css  theme.css
include/: CMakeLists.txt
include/gotcha/: gotcha.h  gotcha_cpp.h  gotcha_types.h  gotcha_utils.h  sampleLib.h
src/: .CMakeLists.txt.swp  .gnuy_lookups.c.swp  .gnuy_lookups.h.swp  CMakeLists.txt  app.cpp  call_mech.hpp  elf_ops.c  elf_ops.h  gnuy_lookups.c  gnuy_lookups.h  gotcha.c  gotcha_auxv.c  gotcha_auxv.h  gotcha_dl.c  gotcha_dl.h  gotcha_utils.c  gotcha_utils.h  hash.c  hash.h  libc_wrappers.c  libc_wrappers.h  library_filters.c  library_filters.h  mallocs  notes.txt  sampleLib.c  sampleLib.h  symbolLookup.c  testing_infrastructure.h  thin.c  thin.h  thin_ppc.s  thin_x86.s  tool.c  tool.h  translations.c  translations.h
src/example/: CMakeLists.txt  sampleLib.c  symbolLookup.c
src/example/autotee/: CMakeLists.txt  autotee.c  test_autotee.c
src/example/dlopen/: num.c
src/example/minimal/: CMakeLists.txt  sampleLib.c  sampleLib.h  symbolLookup.c
src/gotcha/: gotcha_utils.h  sampleLib.h
test/: CMakeLists.txt
test/dispatcher/: CMakeLists.txt  libdispatcher.c  libimpl.c  main.c
test/dlopen/: CMakeLists.txt  num.c  num2.c  test_dlopen.c  test_dlopen2.c
test/filter/: CMakeLists.txt  num.c  num.h  test_filter.c
test/function_ptr/: CMakeLists.txt  num.c  num.h  test_function_ptr.c
test/functional/: CMakeLists.txt  app.cpp
test/hammer/: CMakeLists.txt  addref.cc  gen.cc  gen_externals_h.sh  hammer.cc  math.hpp  multref.cc  wrap.cc  wrap.h
test/multi_agent_dlopen/: CMakeLists.txt  Makefile  dlsym.c  main.c  monitor.c
test/portable_interface/: CMakeLists.txt  autotee.c
test/ppc_stress_multi_module/: CMakeLists.txt  app.c  tool1.c  tool1.h  tool2.c  tool2.h
test/priority/: CMakeLists.txt  app.c  lib1.c  lib1.h  tool1.c  tool1.h  tool2.c  tool2.h  tool3.c  tool3.h
test/rogot/: CMakeLists.txt  autotee.c  test_autotee.c
test/stack/: CMakeLists.txt  app.c  lib1.c  lib1.h  tool1.c  tool1.h  tool2.c
test/symver/: CMakeLists.txt  retX.h  retX_new.c  retX_old.c  sym_macro.h  symver.map  test_symver.c
test/thin/: CMakeLists.txt  wrappees.c  wrappees.h  wrappers.c
test/unit/: CMakeLists.txt  gotcha_unit_tests.c  testing_lib.c  testing_lib.h
test/wrap_main/: CMakeLists.txt  app.c  lib.c  lib.h
